--- a/fuchtml/menu.html
+++ b/fuchtml/menu.html
@@ -73,6 +73,7 @@
     <a href="./TWRF_LAST4.html" target="bottom"><input type="button" value="TWRF過去4報" name="按鈕名稱" style="width:150px;height:50px;"></a>
     <a href="./WRFD_LAST4.html" target="bottom"><input type="button" value="WRFD過去4報" name="按鈕名稱" style="width:150px;height:50px;"></a>
     <a href="./Track.html" target="bottom"><input type="button" value="颱風路徑" name="按鈕名稱" style="width:150px;height:50px;"></a>
+    <a href="./TWRF_WRF_12_24.html" target="bottom"><input type="button" value="WRF&WRFD 12 24" name="按鈕名稱" style="width:180px;height:50px;"></a>
     <a href="./welcome.html" target="bottom"><button class="button" style="width:200px;height:50px;float:right;">NPD ASAP</button></a>
 </body>
 
