--- a/fuchtml/welcome.html
+++ b/fuchtml/welcome.html
@@ -22,7 +22,7 @@
     </div>
     <script>
         myBg = document.getElementById("bgp"); //searches for and detects the input element from the 'myButton' id
-        myBg.src = "./ALL_1920_1080/" + thismonth + "_1920X1080.jpg"; //changes the value
+        myBg.src = "./ALL_1920_1080/" + thismonth + "_1920X1080.png"; //changes the value
     </script>
 </body>
 
