--- a/fuchtml/Track_ZONE.html
+++ b/fuchtml/Track_ZONE.html
@@ -98,15 +98,15 @@
         var www = imfd.clientWidth;
         if (parseInt(www) === parseInt(0)) {
             document.getElementById("showpic").setAttribute("src", "https://npd.cwb.gov.tw/NPD/irisme_data/grapher/gifdir/Ntrack/WRFM05/Track_WRFM05_WD02T_{0}_PSTRK.gif".format([initime[0]]));
-            document.getElementById("showpic").setAttribute("src", "https://npd.cwb.gov.tw/NPD/irisme_data/grapher/gifdir/Ntrack/WRFM05/Track_WRFM05_WD01T_{0}_PSTRK.gif".format([initime[0]]));
-            document.getElementById("showpic").setAttribute("src", "https://npd.cwb.gov.tw/NPD/irisme_data/grapher/gifdir/Ntrack/WRFM05/Track_WRFM05_WD02T_{0}_PSBST120.gif".format([initime[0]]));
-            document.getElementById("showpic").setAttribute("src", "https://npd.cwb.gov.tw/NPD/irisme_data/grapher/gifdir/Ntrack/WRFM05/Track_WRFM05_WD01T_{0}_PSBST120.gif".format([initime[0]]));
+            document.getElementById("showpic1").setAttribute("src", "https://npd.cwb.gov.tw/NPD/irisme_data/grapher/gifdir/Ntrack/WRFM05/Track_WRFM05_WD01T_{0}_PSTRK.gif".format([initime[0]]));
+            document.getElementById("showpic2").setAttribute("src", "https://npd.cwb.gov.tw/NPD/irisme_data/grapher/gifdir/Ntrack/WRFM05/Track_WRFM05_WD02T_{0}_PSBST120.gif".format([initime[0]]));
+            document.getElementById("showpic3").setAttribute("src", "https://npd.cwb.gov.tw/NPD/irisme_data/grapher/gifdir/Ntrack/WRFM05/Track_WRFM05_WD01T_{0}_PSBST120.gif".format([initime[0]]));
         } else if (parseInt(www) > parseInt(100)) {
             document.getElementById("jtwc").style.display = "none";
             document.getElementById("showpic").setAttribute("src", "https://npd.cwb.gov.tw/NPD/irisme_data/grapher/gifdir/Ntrack/WRFM05/Track_WRFM05_WD02T_{0}_PSTRK.gif".format([initime[0]]));
-            document.getElementById("showpic").setAttribute("src", "https://npd.cwb.gov.tw/NPD/irisme_data/grapher/gifdir/Ntrack/WRFM05/Track_WRFM05_WD01T_{0}_PSTRK.gif".format([initime[0]]));
-            document.getElementById("showpic").setAttribute("src", "https://npd.cwb.gov.tw/NPD/irisme_data/grapher/gifdir/Ntrack/WRFM05/Track_WRFM05_WD02T_{0}_PSBST120.gif".format([initime[0]]));
-            document.getElementById("showpic").setAttribute("src", "https://npd.cwb.gov.tw/NPD/irisme_data/grapher/gifdir/Ntrack/WRFM05/Track_WRFM05_WD01T_{0}_PSBST120.gif".format([initime[0]]));
+            document.getElementById("showpic1").setAttribute("src", "https://npd.cwb.gov.tw/NPD/irisme_data/grapher/gifdir/Ntrack/WRFM05/Track_WRFM05_WD01T_{0}_PSTRK.gif".format([initime[0]]));
+            document.getElementById("showpic2").setAttribute("src", "https://npd.cwb.gov.tw/NPD/irisme_data/grapher/gifdir/Ntrack/WRFM05/Track_WRFM05_WD02T_{0}_PSBST120.gif".format([initime[0]]));
+            document.getElementById("showpic3").setAttribute("src", "https://npd.cwb.gov.tw/NPD/irisme_data/grapher/gifdir/Ntrack/WRFM05/Track_WRFM05_WD01T_{0}_PSBST120.gif".format([initime[0]]));
         } else {
             document.getElementById("stat1").innerText = "無產品之可能原因如下";
             document.getElementById("stat2").innerText = "(1)使用者誤觸，西太平洋現在無TD系統";
@@ -126,6 +126,9 @@
     </script>
     <img id="jtwc" style="visibility: hidden;"></img>
     <img id="showpic"> </img>
+    <img id="showpic1"> </img>
+    <img id="showpic2"> </img>
+    <img id="showpic3"> </img>
     <p id="stat1"> </p>
     <p id="stat2"> </p>
     <p id="stat3"> </p>
