--- a/fuchtml/Track_ZONE.html
+++ b/fuchtml/Track_ZONE.html
@@ -125,10 +125,14 @@
         myButton.value = "{0}".format([initime[0]]); //changes the value
     </script>
     <img id="jtwc" style="visibility: hidden;"></img>
-    <img id="showpic"> </img>
-    <img id="showpic1"> </img>
-    <img id="showpic2"> </img>
-    <img id="showpic3"> </img>
+    <table>
+        <tr>
+        <td> <img id="showpic"> </img></td>
+        <td><img id="showpic1"> </img></td>
+        <td><img id="showpic2"> </img></td>
+        <td><img id="showpic3"> </img></td>
+    </tr>
+    </table>
     <p id="stat1"> </p>
     <p id="stat2"> </p>
     <p id="stat3"> </p>
