--- a/fuchtml/WRFD_LAST4.html
+++ b/fuchtml/WRFD_LAST4.html
@@ -85,7 +85,7 @@
         //document.write(initime);
         //document.write(nn)
         //document.write(initime)
-        var model = ["WRFM04_NEW"]
+        var model = ["WRFM04"]
         var twrftau = ["003", "006", "009", "012", "015", "018", "021", "024", "027", "030", "033", "036", "039", "042", "045", "048", "051", "054", "057", "060", "063", "066", "069", "072", "075", "078", "081", "084", "090", "096", "102", "108", "114", "120"];
         //ntau: now, p1tau:previous run p2tau:previous two run ... as so on
         function myFunction1() {
