--- a/fuchtml/TWRF_WRFD.html
+++ b/fuchtml/TWRF_WRFD.html
@@ -89,10 +89,10 @@
 
         function myFunction1() {
             for (x in twrftau) {
-                document.getElementById("tau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRF_M05/WWW_WRF_F2_{0}_{1}_A01X2B.gif".format([twrftau[x], initime[0]]);
+                document.getElementById("tau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRFM04/{2}/WWW_WRF_F2_{0}_{1}_A01X2B.gif".format([twrftau[x], initime[0],initime[0]]);
                 if (parseInt(x) > 0) {
-                    document.getElementById("tacctau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRF_M05/WWW_WRF_F2_{0}_{1}_A-B62T.gif".format([twrftau[x], initime[0]]);
-                    document.getElementById("dacctau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRFM04_NEW/WWW_WRF_F2_{0}_{1}_A-B62T.gif".format([twrftau[x], initime[0]]);
+                    document.getElementById("tacctau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRFM05/{2}/WWW_WRF_F2_{0}_{1}_A-B62T.gif".format([twrftau[x], initime[0],initime[0]]);
+                    document.getElementById("dacctau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRFM04/{2}/WWW_WRF_F2_{0}_{1}_A-B62T.gif".format([twrftau[x], initime[0],initime[0]]);
                 }
             }
             document.getElementById("myButton1").style.color = "red"
@@ -103,10 +103,10 @@
 
         function myFunction2() {
             for (x in twrftau) {
-                document.getElementById("tau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRF_M05/WWW_WRF_F2_{0}_{1}_A01X2B.gif".format([twrftau[x], initime[1]]);
+                document.getElementById("tau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRFM05/{2}/WWW_WRF_F2_{0}_{1}_A01X2B.gif".format([twrftau[x], initime[1], initime[1]]);
                 if (parseInt(x) > 0) {
-                    document.getElementById("tacctau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRF_M05/WWW_WRF_F2_{0}_{1}_A-B62T.gif".format([twrftau[x], initime[1]]);
-                    document.getElementById("dacctau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRFM04_NEW/WWW_WRF_F2_{0}_{1}_A-B62T.gif".format([twrftau[x], initime[1]]);
+                    document.getElementById("tacctau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRFM05/{2}/WWW_WRF_F2_{0}_{1}_A-B62T.gif".format([twrftau[x], initime[1], initime[1]]);
+                    document.getElementById("dacctau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRFM04/{2}/WWW_WRF_F2_{0}_{1}_A-B62T.gif".format([twrftau[x], initime[1], initime[1]]);
                 }
             }
             document.getElementById("myButton2").style.color = "red"
@@ -117,10 +117,10 @@
 
         function myFunction3() {
             for (x in twrftau) {
-                document.getElementById("tau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRF_M05/WWW_WRF_F2_{0}_{1}_A01X2B.gif".format([twrftau[x], initime[2]]);
+                document.getElementById("tau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRFM05/{2}/WWW_WRF_F2_{0}_{1}_A01X2B.gif".format([twrftau[x], initime[2], initime[2]]);
                 if (parseInt(x) > 0) {
-                    document.getElementById("tacctau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRF_M05/WWW_WRF_F2_{0}_{1}_A-B62T.gif".format([twrftau[x], initime[2]]);
-                    document.getElementById("dacctau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRFM04_NEW/WWW_WRF_F2_{0}_{1}_A-B62T.gif".format([twrftau[x], initime[2]]);
+                    document.getElementById("tacctau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRFM05/{2}/WWW_WRF_F2_{0}_{1}_A-B62T.gif".format([twrftau[x], initime[2], initime[2]]);
+                    document.getElementById("dacctau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRFM04/{2}/WWW_WRF_F2_{0}_{1}_A-B62T.gif".format([twrftau[x], initime[2], initime[2]]);
                 }
             }
             document.getElementById("myButton3").style.color = "red"
@@ -131,10 +131,10 @@
 
         function myFunction4() {
             for (x in twrftau) {
-                document.getElementById("tau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRF_M05/WWW_WRF_F2_{0}_{1}_A01X2B.gif".format([twrftau[x], initime[3]]);
+                document.getElementById("tau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRFM05/{2}/WWW_WRF_F2_{0}_{1}_A01X2B.gif".format([twrftau[x], initime[3], initime[3]]);
                 if (parseInt(x) > 0) {
-                    document.getElementById("tacctau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRF_M05/WWW_WRF_F2_{0}_{1}_A-B62T.gif".format([twrftau[x], initime[3]]);
-                    document.getElementById("dacctau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRFM04_NEW/WWW_WRF_F2_{0}_{1}_A-B62T.gif".format([twrftau[x], initime[3]]);
+                    document.getElementById("tacctau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRFM05/{2}/WWW_WRF_F2_{0}_{1}_A-B62T.gif".format([twrftau[x], initime[3], initime[3]]);
+                    document.getElementById("dacctau" + twrftau[x]).src = "https://npd.cwb.gov.tw/NWPDMS/irisme_data/grapher/gifdir/Nwww/WRFM04/{2}/WWW_WRF_F2_{0}_{1}_A-B62T.gif".format([twrftau[x], initime[3], initime[3]]);
                 }
             }
             document.getElementById("myButton4").style.color = "red"
