--- a/fuchtml/TWRF_LAST4.html
+++ b/fuchtml/TWRF_LAST4.html
@@ -85,7 +85,7 @@
         //document.write(initime);
         //document.write(nn)
         //document.write(initime)
-        var model = ["WRF_M05"]
+        var model = ["WRFM05"]
         var twrftau = ["000", "006", "012", "018", "024", "030", "036", "042", "048", "054", "060", "066", "072", "078", "084", "090", "096", "102", "108", "114", "120"];
         //ntau: now, p1tau:previous run p2tau:previous two run ... as so on
         function myFunction1() {
